Stabilize initial plugin system

--- a/Twinkle.TestDriverPlugin/Twinkle.TestDriverPlugin.csproj
+++ b/Twinkle.TestDriverPlugin/Twinkle.TestDriverPlugin.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>TestDriverPlugin.twext</AssemblyName>
+    <UseCompiledBindings>false</UseCompiledBindings>
   </PropertyGroup>
 
   <ItemGroup>
