--- a/Twinkle/Twinkle.csproj
+++ b/Twinkle/Twinkle.csproj
@@ -13,11 +13,12 @@
     <PackageReference Include="Avalonia.Svg" Version="11.0.0.18" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.11"/>
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.11"/>
-    <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.11"/>
     <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
     <PackageReference Include="FluentIcons.Avalonia.Fluent" Version="1.1.242" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+
+    <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.11"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -36,8 +37,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Vector\framework-cog.svg" />
     <AvaloniaResource Include="Resources\Vector\framework-cog.svg" />
-    <None Remove="Resources\Vector\led-input-module-sketch.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\Logging\" />
   </ItemGroup>
 </Project>
