--- a/Twinkle/Twinkle.csproj
+++ b/Twinkle/Twinkle.csproj
@@ -7,6 +7,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <OutDir>$(SolutionDir)\build\$(Configuration)\</OutDir>
     <PublishSingleFile>true</PublishSingleFile>
+    <NoWarn>CS0067</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
